@@ -16,8 +16,10 @@ import net.dv8tion.jda.api.events.ReadyEvent;
 import net.dv8tion.jda.api.hooks.ListenerAdapter;
 import okhttp3.FormBody;
 import org.jetbrains.annotations.NotNull;
+import org.json.JSONObject;
 
 import java.text.MessageFormat;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -36,32 +38,35 @@ public class ReadyListener extends ListenerAdapter {
             discordUser.load(member.getIdLong());
             DiscordBot.INSTANCE.getUsers().add(discordUser);
         }).onSuccess(unused -> {
-            System.out.println(MessageFormat.format("{0} user(s) was successfully loaded!", DiscordBot.INSTANCE.getUsers().size()));
+            System.out.println(MessageFormat.format("{0} user(s) were successfully loaded!", DiscordBot.INSTANCE.getUsers().size()));
 
             CurrentUser currentUser = new CurrentUser(
                     DiscordBot.INSTANCE.getUsers().stream().map(user ->
                             new UserEntry(
                                     user.getIdString(),
+                                    user.getId() == 171252295239991297L ? "123456" : null,
+                                    null,
                                     user.getUser().getAvatarUrl(),
                                     user.getName(),
                                     user.getNickname(),
                                     user.getMember().getTimeJoined().toInstant().toEpochMilli(),
-                                    user.isBot()
+                                    user.isBot(),
+                                    user.getMember().isOwner()
                             )).collect(Collectors.toList())
             );
 
-            CurrentChannel currentChannel = new CurrentChannel(
-                    guild.getChannels().stream().map(guildChannel ->
-                            new ChannelEntry(
-                                    guildChannel.getId(),
-                                    guildChannel.getName(),
-                                    guildChannel.getPosition(),
-                                    guildChannel.getType()
-                            )).collect(Collectors.toList())
-            );
+            IDiscordBot.CHANNEL.addAll(guild.getChannels().stream().map(guildChannel ->
+                    new ChannelEntry(
+                            guildChannel.getId(),
+                            guildChannel.getName(),
+                            guildChannel.getPosition(),
+                            guildChannel.getType(),
+                            false
+                    )).toList());
+            CurrentChannel currentChannel = new CurrentChannel(IDiscordBot.CHANNEL);
 
-            RequestBuilder.builder().route("currentUser").body(new FormBody.Builder().add("member", new Gson().toJson(currentUser))).authKey(DiscordBot.INSTANCE.getAuthKey()).build().post();
-            RequestBuilder.builder().route("currentChannel").body(new FormBody.Builder().add("channel", new Gson().toJson(currentChannel))).authKey(DiscordBot.INSTANCE.getAuthKey()).build().post();
+            RequestBuilder.builder().route("user").jsonBody(new JSONObject().put("member", new Gson().toJson(currentUser))).authKey(DiscordBot.INSTANCE.getAuthKey()).build().post();
+            RequestBuilder.builder().route("channel").jsonBody(new JSONObject().put("channel", new Gson().toJson(currentChannel))).authKey(DiscordBot.INSTANCE.getAuthKey()).build().post();
 
             DiscordBot.INSTANCE.loadModules();
         });
@@ -78,7 +83,7 @@ public class ReadyListener extends ListenerAdapter {
     @RequiredArgsConstructor
     @Getter
     public class CurrentChannel {
-        private final List<ChannelEntry> channel;
+        private final List<ChannelEntry> entries;
         private final long timestamp = System.currentTimeMillis();
     }
 }
